# No6_mlb-pitcher-analyzer

./: .gitignore  Dockerfile  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt  run.py  setup.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: coding_standards.md
mlb_pitcher_analyzer/: __init__.py
mlb_pitcher_analyzer/config/: settings.py
mlb_pitcher_analyzer/utils/: logger.py
src/data_collection/: config.py
src/data_collection/api/: authentication.py  mlb_api.py  rate_limiter.py
src/data_collection/parsers/: csv_parser.py  json_parser.py
src/data_collection/storage/: local_storage.py  schema.py  sync.py
src/utils/: logging.py
